# linera-protocol-archive

./: .gitmodules  CLI.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  docker.yml  documentation.yml  dynamodb.yml  kubernetes.yml  rust.yml  wasm.yml
docker/: Dockerfile  fetch-from-etcd.sh  integration-test.sh  run-client.sh  run-server.sh  setup.sh
examples/: Cargo.toml
examples/amm/: Cargo.toml
examples/crowd-funding/: Cargo.toml
examples/fungible/: Cargo.toml  README.md
examples/llm/: README.md
examples/matching-engine/: Cargo.toml
kubernetes/linera-validator/: build_and_redeploy.sh
linera-base/: Cargo.toml
linera-base/src/: abi.rs  chain.rs  committee.rs  crypto.rs  data_types.rs  execution.rs  http.rs  identifiers.rs  lib.rs  locks.rs  manager.rs  messages.rs  metrics.rs  ownership.rs  prometheus_util.rs  traced_mutex.rs  tracing.rs  unit_tests.rs
linera-base/src/data_types/: balance_scalar.rs
linera-chain/: Cargo.toml
linera-chain/src/: chain.rs  data_types.rs  inbox.rs  lib.rs  manager.rs  messages.rs  outbox.rs  test.rs
linera-client/src/: client_context.rs  client_options.rs
linera-contracts/: Cargo.toml  api.wit  bindings.rs  contract.wit
linera-contracts/example/: Cargo.toml  bindings.rs
linera-contracts/example/src/: lib.rs
linera-contracts/src/: contract.rs  main.rs
linera-core/: Cargo.toml
linera-core/benches/: client_benchmarks.rs
linera-core/src/: chain_worker.rs  client.rs  data_types.rs  join_set_ext.rs  lib.rs  local_node.rs  messages.rs  node.rs  notifier.rs  updater.rs  value_cache.rs  worker.rs
linera-ethereum/src/: provider.rs
linera-examples/counter2/: Cargo.toml
linera-examples/fungible/: Cargo.toml
linera-examples/fungible2/: Cargo.toml
linera-examples/reentrant-counter/: Cargo.toml
linera-execution/: Cargo.toml  build.rs
linera-execution/src/: application_registry.rs  applications.rs  execution.rs  execution_state_actor.rs  lib.rs  ownership.rs  resources.rs  runtime.rs  system.rs
linera-execution/src/runtime_actor/: handlers.rs  senders.rs
linera-execution/src/test_utils/: mock_application.rs  mod.rs  system_execution_state.rs
linera-execution/src/unit_tests/: runtime_tests.rs
linera-execution/src/wasm/: async_boundary.rs  async_determinism.rs  common.rs  conversions_from_wit.rs  conversions_to_wit.rs  entrypoints.rs  external_future.rs  guest_futures.rs  mod.rs  module_cache.rs  runtime.rs  runtime_interface.rs  sanitizer.rs  system_api.rs  wasmer.rs  wasmtime.rs
linera-execution/src/wasm/runtime_actor/: handlers.rs  mod.rs  requests.rs  responses.rs
linera-execution/tests/: contract_runtime_apis.rs  fee_consumption.rs  test_execution.rs  test_system_execution.rs  wasm.rs
linera-execution/tests/common/: mod.rs
linera-execution/tests/fixtures/: counter_contract.wasm  counter_service.wasm
linera-rpc/: Cargo.toml
linera-sdk/: Cargo.toml  build.rs  contract.wit  contract_system_api.wit  mock_queryable_system.wit  mock_system_api.wit  mock_writable_system.wit  queryable_system.wit  service_system_api.wit  writable_system.wit
linera-sdk/examples/: counter.rs
linera-sdk/examples/boilerplate/contract/: conversions_from_wit.rs  exported_futures.rs  system_api.rs
linera-sdk/examples/boilerplate/service/: conversions_from_wit.rs  exported_futures.rs  system_api.rs
linera-sdk/examples/contract_boilerplate/: system_api.rs
linera-sdk/examples/counter/: contract.rs  service.rs  state.rs
linera-sdk/examples/crowd-funding/: contract.rs  service.rs  state.rs
linera-sdk/examples/fungible/: contract.rs  service.rs  state.rs
linera-sdk/examples/service_boilerplate/: system_api.rs
linera-sdk/src/: base.rs  contract_api.rs  crypto.rs  ethereum.rs  exported_future.rs  extensions.rs  graphql.rs  lib.rs  mock_system_api.rs  util.rs
linera-sdk/src/contract/: conversions_from_wit.rs  conversions_to_wit.rs  exported_futures.rs  mod.rs  runtime.rs  storage.rs  system_api.rs  system_api_stubs.rs  test_runtime.rs  wit.rs  wit_types.rs
linera-sdk/src/contract/system_api/: mod.rs  private.rs  wit.rs
linera-sdk/src/service/: conversions_from_wit.rs  conversions_to_wit.rs  mod.rs  runtime.rs  storage.rs  system_api.rs  system_api_stubs.rs  test_runtime.rs  wit.rs  wit_types.rs
linera-sdk/src/service/system_api/: mod.rs  private.rs  wit.rs
linera-sdk/src/test/: block.rs  chain.rs  conversions.rs  mod.rs  validator.rs
linera-sdk/src/test/integration/: block.rs  chain.rs  mod.rs  validator.rs
linera-sdk/src/test/unit/: conversions_from_wit.rs  conversions_to_wit.rs  mod.rs  wit.rs
linera-sdk/src/test/unit/common/: conversions_from_wit.rs  conversions_to_wit.rs
linera-sdk/src/test/unit/contract/: conversions_from_wit.rs  conversions_to_wit.rs  mod.rs
linera-sdk/src/test/unit/service/: mod.rs
linera-sdk/src/views/: mock_key_value_store.rs  mock_system_api.rs  mod.rs  system_api.rs  system_api_stubs.rs
linera-sdk/wasm-tests/: Cargo.toml
linera-sdk/wasm-tests/src/: lib.rs
linera-sdk/wit/: README.md  contract-entrypoints.wit  contract-system-api.wit  mock-system-api.wit  service-entrypoints.wit  service-system-api.wit  view-system-api.wit
linera-service/: Cargo.toml
linera-storage/: Cargo.toml
linera-views/: Cargo.toml
linera-views-derive/: Cargo.toml
linera-views/benches/: reentrant_collection_view.rs
linera-views/src/: batch.rs  chain_guards.rs  collection_view.rs  common.rs  dynamo_db.rs  hash.rs  hashable_wrapper.rs  key_value_store_view.rs  lib.rs  log_view.rs  macros.rs  map_view.rs  memory.rs  metering.rs  queue_view.rs  reentrant_collection_view.rs  register_view.rs  rocks_db.rs  rocksdb.rs  set_view.rs  shared_view.rs  views.rs
linera-views/src/test_utils/: mod.rs  test_views.rs
linera-views/src/unit_tests/: dynamo_db_context_tests.rs  shared_view.rs  views.rs
linera-views/tests/: operations_tests.rs  queueview_tests.rs  random_container_tests.rs  views_tests.rs
linera-witty/: Cargo.toml  build.rs
linera-witty-macros/: Cargo.toml  README.md
zef-base/src/: lib.rs  (+5 more)
zef-service/: Cargo.toml
zef-storage/: Cargo.toml
(+270 files in other folders)
