[workspace]
members = [
        "linera-base",
        "linera-chain",
        "linera-core",
        "linera-execution",
        "linera-rpc",
        "linera-service",
        "linera-storage",
        "linera-views",
]
exclude = [
        "linera-contracts",
        "linera-contracts/example",
]

[profile.release]
debug = true

[profile.bench]
debug = true
