[package]
name = "linera-base"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
default = [
    "messages", "bcs", "bincode", "hex", "log", "once_cell", "rand", "ed25519", "serde_json",
    "serde-name", "sha2", "structopt", "thiserror",
]
messages = []
test = ["test-strategy", "proptest"]

[dependencies]
bcs = { version = "0.1.3", optional = true }
bincode = { version = "1.3.3", optional = true }
generic-array = { version = "0.14.4", features = ["serde"] }
hex = { version = "0.4.3", optional = true }
log = { version = "0.4.14", optional = true }
once_cell = { version = "1.13.0", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
ed25519 = { version = "1.2.0", optional = true }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
proptest = { version = "1.0.0", optional = true }
serde_json = { version = "1.0.68", optional = true }
serde-name = { version = "0.2.0", optional = true }
sha2 = { version = "0.9.8", optional = true }
structopt = { version = "0.3.23", optional = true }
thiserror = { version = "1.0.31", optional = true }
test-strategy = { version = "0.2.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
similar-asserts = "1.1.0"
serde-reflection = "0.3.5"
serde_yaml = "0.8.21"
test-strategy = "0.2.0"
