[package]
name = "linera-contracts"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
wasmer = ["dep:wasmer", "wit-bindgen-wasmer"]
wasmtime = ["dep:wasmtime", "wit-bindgen-wasmtime"]

[dependencies]
anyhow = "1.0.65"
pin-project = "1.0.12"
tokio = { version = "1.21.2", features = ["full"] }
wasmer = { path = "wasmer/lib/api", optional = true }
wasmtime = { version = "0.38.0", optional = true }
wit-bindgen-wasmer = { path = "wit-bindgen/crates/wasmer", optional = true }
wit-bindgen-wasmtime = { path = "wit-bindgen/crates/wasmtime", optional = true }
