[package]
name = "linera-contracts"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
wasmer = ["dep:wasmer", "wit-bindgen-wasmer"]
wasmtime = ["dep:wasmtime", "wit-bindgen-wasmtime"]

[dependencies]
anyhow = "1.0.65"
pin-project = "1.0.12"
tokio = { version = "1.21.2", features = ["full"] }
wasmer = { version = "3.0.0-rc.1", optional = true }
wasmtime = { version = "0.39.1", optional = true }
wit-bindgen-wasmer = { git = "https://github.com/jvff/wit-bindgen", rev = "00fda0f0091849e35191075b29b1b3680c733239", optional = true }
wit-bindgen-wasmtime = { git = "https://github.com/jvff/wit-bindgen", rev = "00fda0f0091849e35191075b29b1b3680c733239", optional = true }

linera-execution = { path = "../linera-execution" }
