[package]
name = "linera-contracts"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
wasmer = ["dep:wasmer", "wit-bindgen-host-wasmer-rust"]
wasmtime = ["dep:wasmtime", "wit-bindgen-host-wasmtime-rust"]

[dependencies]
anyhow = "1.0.65"
pin-project = "1.0.12"
tokio = { version = "1.21.2", features = ["full"] }
wasmer = { version = "3.0.0-rc.1", optional = true }
wasmtime = { version = "0.39.1", optional = true }
wit-bindgen-host-wasmer-rust = { git = "https://github.com/jvff/wit-bindgen", rev = "4a9e7cc6899a9736e2a2d23dcfc4f8744b6107a1", optional = true }
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/jvff/wit-bindgen", rev = "4a9e7cc6899a9736e2a2d23dcfc4f8744b6107a1", optional = true }

linera-execution = { path = "../linera-execution" }
