[package]
name = "linera-execution"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
wasmer = []
wasmtime = ["dep:wasmtime", "wit-bindgen-wasmtime"]
test = []

[dependencies]
async-trait = "0.1.52"
dashmap = "5.3.4"
futures = "0.3.24"
linera-base = { path = "../linera-base" }
linera-views = { path = "../linera-views" }
log = "0.4.14"
once_cell = "1.13.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.31"
tokio = "1.12.0"
wasmtime = { version = "0.38.0", optional = true }
wit-bindgen-wasmtime = { path = "../linera-contracts/wit-bindgen/crates/wasmtime", optional = true }
