[package]
name = "linera-execution"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
wasmer = ["dep:wasmer", "wit-bindgen-wasmer"]
wasmtime = ["dep:wasmtime", "wit-bindgen-wasmtime"]
test = []

[dependencies]
async-trait = "0.1.52"
dashmap = "5.3.4"
futures = "0.3.24"
linera-base = { path = "../linera-base" }
linera-views = { path = "../linera-views" }
log = "0.4.14"
once_cell = "1.13.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.31"
tokio = "1.12.0"
wasmer = { version = "3.0.0-rc.1", optional = true }
wasmtime = { version = "0.39.1", optional = true }
wit-bindgen-wasmer = { git = "https://github.com/jvff/wit-bindgen", rev = "00fda0f0091849e35191075b29b1b3680c733239", optional = true }
wit-bindgen-wasmtime = { git = "https://github.com/jvff/wit-bindgen", rev = "00fda0f0091849e35191075b29b1b3680c733239", optional = true }
