[package]
name = "linera-sdk"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[package.metadata.cargo-udeps.ignore]
development = ["linera-sdk"]

[features]
crypto = ["ed25519-dalek", "generic-array", "hex", "serde-name", "sha3"]
test = [
    "cargo_toml", "dashmap", "linera-chain", "linera-core", "linera-core/test", "linera-execution",
    "linera-storage",
]

[dependencies]
async-trait = "0.1.52"
bcs = "0.1.3"
custom_debug_derive = "0.5.0"
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"], optional = true }
futures = "0.3.17"
generic-array = { version = "0.14.4", features = ["serde"], optional = true }
hex = { version = "0.4.3", optional = true }
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde-name = { version = "0.2.0", optional = true }
serde_with = "2.1.0"
linera-views = { path = "../linera-views" }
sha3 = { version = "0.10.6", optional = true }
thiserror = { version = "1.0.31" }
wit-bindgen-guest-rust = { git = "https://github.com/jvff/wit-bindgen", rev = "4f25d5363360c049e3415c32f5654faea5f874ce" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.57"
cargo_toml = { version = "0.15.2", optional = true }
dashmap = { version = "5.4.0", optional = true }
linera-base = { path = "../linera-base" }
linera-chain = { path = "../linera-chain", optional = true }
linera-core = { path = "../linera-core", optional = true }
linera-execution = { path = "../linera-execution", optional = true }
linera-storage = { path = "../linera-storage", optional = true }
rand = "0.7.3"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
wasmtime = "1.0"
