[package]
name = "linera-views"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = ["anyhow", "tokio/macros", "tokio/sync", "tokio/parking_lot"]

[dependencies]
anyhow = { version = "1.0.57", optional = true }
async-trait = "0.1.52"
bcs = "0.1.3"
futures = "0.3.17"
generic-array = { version = "0.14.4", features = ["serde"] }
http = "0.2.7"
linera-base = { path = "../linera-base" }
linera-views-macro = { path = "../linera-views-macro" }
log = "0.4.14"
paste = "1.0.8"
serde = { version = "1.0.130", features = ["derive"] }
sha2 = "0.9.8"
thiserror = "1.0.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
tokio = "1.12.0"
rocksdb = "0.19.0"
aws-config = "0.14.0"
aws-sdk-dynamodb = "0.14.0"
aws-sdk-s3 = "0.14.0"
aws-smithy-http = "0.44.0"
aws-types = "0.14.0"

[dev-dependencies]
linera-views = { path = ".", features = ["test"] }
tempfile = "3.2.0"
