[package]
name = "linera-contract-example"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.52"
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = { path = "../../linera-sdk" }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.31"
wit-bindgen-rust = { path = "../wit-bindgen/crates/rust-wasm" }
